--- a/_i18n_xliff/UnitedPizzaHelper Localizations/en.xcloc/Source Contents/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/en.xcloc/Source Contents/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
@@ -1450,6 +1450,16 @@
         }
       }
     },
+    "setting.display.reduceUIGlassDecorations.explain.deviceRAMInsufficient:%lld" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "This toggle is always active and locked on devices with less than %lld GB of RAM due to hardware performance constraints."
+          }
+        }
+      }
+    },
     "setting.display.reduceUIGlassDecorations.explain.intelMac" : {
       "localizations" : {
         "en" : {
